# rusty-app

./: .envrc  .gitignore  Cargo.toml  Justfile  README.md  diesel.toml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: main.yml  wip.yml
crates/server/: Cargo.toml
crates/server/src/: main.rs  models.rs  schema.rs
crates/server/src/models/: mod.rs  person.rs  todo.rs  user_account.rs
migrations/2023-03-26-194716_initial_setup/: down.sql  up.sql
migrations/2023-03-26-221852_update_user_id_foreign_key/: down.sql  up.sql
